Terminei a parte de ocultações de irregulares

--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -42,7 +42,7 @@
 \begin{document}
 \doutorado
 
-\titulo{Estudo Astrométrico e Fotométrico do Sistema Solar Exterior}
+\titulo{Um Estudo Astrométrico e Fotométrico do Sistema Solar Exterior}
 \autor{Altair Ramos Gomes Júnior}
 \ultimonome{Gomes Júnior}
 \nome{Altair Ramos}
@@ -116,8 +116,99 @@
 telescópios espaciais.\\
 \indent Um método que tem se mostrado eficiente para a obtenção desses parâmetros é o métodode ocultações estelares, que proporciona medidas tão precisas que são apenas superadas por medidas oriundas de sondas.
 
+\chapter{Astrometria dos sat\'elites irregulares dos planetas gigantes}
+\label{Cap: Irr-astrometria}
+
+\indent \indent Os satélites irregulares dos planetas gigantes são menores que as regulares, possuindo órbitas mais excêntricas, inclinadas e distantes. Na maioria dos casos, essas órbitas são retrógradas. Devido suas configurações orbitais, é altamente aceito que estes objetos foram capturados nos estágios iniciais da formação do sistema solar \citep{Sheppard2003}.
+
+Por serem pequenos, eles são pouco brilhantes e só foram descobertos no último século\footnote{Website: http://ssd.jpl.nasa.gov/?sat\_discovery}. Dentre os satélite irregulares dos planetas gigantes, poucos são aqueles que possuem medidas de seus parâmetros físicos. Apenas Himalia, Phoebe e Nereida foram observados por sondas, apesar de não serem medidas ideais, já que foram alvos de oportunidade. A sonda Cassini observou Himalia em 2000 ao passar próximo a Júpiter e obteve o tamanho de Himalia com um erro médio de 10 km \citep{Porco2003}. Em 2004, a Cassini, aproximando-se de Saturno, observou Phoebe em alta resolução obtendo um erro médio na medida de seu tamanho de 0.7 km \citep{Thomas2010}. Por fim, Nereida foi observado em 1989 pela sonda Voyager 2 e seu tamanho foi obtido com um erro de 25 km \citep{Smith1989}. Para outros satélites irregulares de Júpiter, seus tamanhos foram estimados por \cite{Rettig2001} impondo um albedo de 4\% cam a justifica de que esse valor é um albedo nominalmente utilizado para objetos do Sistema Solar Externo.
+
+Existem alguns mecanismos de captura de objetos por planetas gigantes propostos na literatura. Há o Arrasto Gasoso na nebulosa circumplanetária primordial \citep{Sheppard2005} onde o movimento objeto seria afetado gás e sua velocidade diminuiria até que fosse capturado pelo planeta. Outro mecanismo se chama captura pull-down \citep{Sheppard2005}, onde a massa do planeta aumentaria enquanto o objeto estivesse temporariamente capturado.
+
+Um mecanismo baseado no modelo de Nice \citep{Morbidelli2005, Tsiganis2005, Gomes2005} foi proposto por \cite{Nesvorny2007} e, especificamente para Júpiter, por \citealp{Nesvorny2014}. Durante a instabilidade do sistema solar primordial, ocorreram encontros entre os planetas externos. Esses encontros planetários poderiam trocar energia e momento angular entre os planetas e os objetos próximos tornando possível a captura de um corpo irregular por um planeta gigante. Nesse cenário, a taxa de sobrevivência de satélites anteriores ao LHB (Bombardeamento Pesado Tardio\footnote{"Late Heavy Bombardment", em inglês}) é muito pequena.
+
+Um outro mecanismo importante é a captura através de interações colisionais \citep{Sheppard2005}. Uma colisão entre dois corpos pequenos dentro da esfera de Hill do planeta poderia gerar objetos fragmentados e a energia dissipativa poderia ser tal que alguns desses objetos seriam capturados.
+
+Alguns desses objetos formam grupos dinâmicos com elementos orbitais semelhantes, chamados famílias, similar às famílias encontradas no Cinturão Principal de Asteróides. Essas famífias podem ter sido criadas por um corpo pai que se fragmentou por colisões com cometas ou outros asteróides \citep{Nesvorny2004}. Colisões com cometas tem uma probabilidade maior de ocorrer durante o Bombardeamento Pesado Tardio (LHB) \citep{Gomes2005}.
+
+\cite{Nesvorny2003} estudou as taxas de colisões entre satélites irregulares e concluiu que alguns satélites podem ter sido removidos por colisão com um satélite maior. A taxa de colisão entre os satélites do grupo de Himalia (Himalia, Elara, Lysithea and Leda, principalmente), por exemplo, foi encontrado como sendo maior que "um" durante a idade do sistema solar sugerindo que sua estrutura atual foi originada por colisão satélite-satélite.
+
+Para Phoebe, materiais ejetados de sua superfície causadas por impactos poderiam evoluir devido ao arrasto de Poynting-Robertson e colidir com Iapetus causando causando a grande variação de albedo observada no satélite \citep{Nesvorny2003}. De fato, A Cassini detectou em Phoebe uma característica de absorção em 2.42 $\mu m$, provavelmente combinações de CN, que foi também detectada no lado escuro de Iapetus \citep{Clark2005}
+
+Se esses objetos foram capturados, permanece a pergunta de onde eles vieram. \citealp{Clark2005} mostraram a partir de espectroscopia da Cassini que Phoebe tem uma superfície provavelmente coberta por materiam do sistema solar externo e \citealp{Grav2003} mostraram que os satélites de grupo prógrado de Júpiter Himalia tem cores cinzas implicando que suas superfícies são similares a asteróides tipo C. Nesse mesmo trabalho, o grupo retrógrado de Júpiter Carme foi encontrado como tendo cores superficiais semelhantes à asteróides tipo D como a família de Hilda ou famílias de troianos, enquanto JXIII Kalyke tem uma cor mais avermelhada como centauros ou objetos trans-Netunianos (TNOs).
+
+Para os satélites de saturno, \citealp{Grav2007} mostraram através de suas cores e inclinações espectrais que esses satélites contêm uma fração mais ou menos igual de objetos semelhantes a asteróides tipo c, P e D, mas SXXII Ijiraq é um pouco mais avermelhado que objetos tipo D. Esses trabalhos sugerem origins diferentes para os satélites irregulares.
+
+Nesse contexto, durante o mestrado, foi realizado junto ao grupo um trabalho de caráter astrométrico para a melhoria das efemérides dos satélites irregulares de Júpiter Saturno. Em colaboração com o Dr. Jean-Eudes Arlot do IMCCE, reduzi um banco de dados observado no Observatoire Haute-Provence (OHP) entre 1998 e 2008, contendo mais de 28 mil posições para 10 satélites. Reduzi também um banco de dados com mais de 100 mil imagens obtidas no Observatório do Pido dos Dias (OPD) entre 1992 e 2014. Já no doutorado, neste mesmo âmbito, reduzi 810 observações feitas no European Southern Observatory (ESO) em 24 noites utilizando o detector mosaico CCD Wide Field Imager (WFI).
+
+Mais de 8000 posições foram identificadas como pertencentes a satélites irregulares. Porém, devido à grande gama de configurações (3 sítios, 5 telescópios, mais de 10 câmeras e mais de 10 filtros) e às condições observacionais de algumas noites, 6523 posições foram selecionadas como boas posições, ou seja, possuem 3 ou mais estrelas do catálogo de referência (UCAC4), estão dentro de 2$\sigma$ da dispersão das posições da noite e a dispersão da noite à qual pertence não é maior que 2$\sigma$ da média das dispersões das noites. Essa estatística é feita satélite por satélite. O trabalho está aceito para publicação \citep{GomesJunior2015-Irregular} e o catálogo de posições está disponível no CDS.
+
+Um dos principais resultados desse trabalho foi a grande quantidade de posições obtidas para os satélites irregulares em comparação com a quantidade utilizada nas integrações numéricas atuais (ver tabela \ref{Tab: comparison-horizons}).
+
+\begin{table}[h]
+\caption{\label{Tab: comparison-horizons} Comparação entre o número de posições obtidas em \cite{GomesJunior2015-Irregular} e o número utilizado nas integrações numéricas das órbitas pelo JPL como publicado por  \cite{Jacobson2012}. Os satélites estão separados por planeta (linha reta) e por família orbital (linha tracejada)}
+\begin{centering}
+\begin{tabular}{lccccccc}
+\hline  \hline
+Satélite & Diâm. (km)\tablefootnote{Planetary Satellite Physical Parameters - JPL: \url{http://ssd.jpl.nasa.gov/?sat_phys_par}} & Mag V  & OPD  & OHP & ESO & Total  & Jacobson \tabularnewline
+\hline
+Himalia & 170 & 14 & 854 & 357 & 23 & 1234 & 1757 \tabularnewline
+Elara & 86 & 16 & 403 & 187 & 46 & 636 & 1115 \tabularnewline
+Lysithea & 36 & 18 & 60 & 84 & 90 & 234 & 431 \tabularnewline
+Leda & 20 & 19 & 6 & 48 & 44 & 98 & 178 \tabularnewline
+\hdashline
+Pasiphae & 60 & 17 & 295 & 248 & 66 & 609 & 1629 \tabularnewline
+Callirrhoe & 9 & 21 & 9 & -  &  16 & 25 & 95 \tabularnewline
+Megaclite & 5 & 22 & - & -  &  10 & 10 & 50  \tabularnewline
+\hdashline
+Ananke & 28 & 18 & 52 & 141 & 57 & 250 & 600 \tabularnewline
+Praxidike & 7 & 21 & - & -  &   2 & 2 & 59 \tabularnewline
+\hdashline
+Carme & 46 & 18 & 90 & 204 & 37 & 331 & 973 \tabularnewline
+Sinope & 38 & 18 & 41 & 169 & 11 & 221 & 854 \tabularnewline
+Themisto & 8 & 21 & - & - & 16 & 16 & 55 \tabularnewline
+\hline
+Phoebe & 213 & 16 & 1239 & 516 & 32 & 1787 & 3479 \tabularnewline
+\hdashline
+Siarnaq & 40 & 20 & - & 20 & 56 & 76 & 239 \tabularnewline
+Paaliaq & 22 & 21 & - & - & 11 & 11 & 82 \tabularnewline
+\hdashline
+Albiorix & 32 & 20 & - & - & 46 & 46 & 137 \tabularnewline
+\hline
+Sycorax & 150 & 21 & - & - & 35 & 35 & 237 \tabularnewline
+\hline
+Nereid & 340 & 19 & 803 & - & 99 & 902 & 716 \tabularnewline
+\hline
+\end{tabular}
+\par\end{centering}
+\end{table}
+
+Com o objetivo ver o potencial das nossas posições em melhorar as órbitas dos satélites irregulares, analizamos os offsets das nossas posições com respeito às efemérides do JPL. Tomando Carme como exemplo, plotamos os offsets médios das efemérides para cada noite na Fig. \ref{Fig: carme_anom} e suas respectivas dispersões (erro de barra 1$\sigma$) em função da anomalia verdadeira em ascenção reta e declinação. A figura mostra claramente um erro sistemático em declinação. Quando Carme está próximo a seu apojove (anomalia verdadeira = 180$\degr$), seus offsets tem maior probabilidade de serem mais negativos do que aqueles próximos ao seu perijove (anomalia verdadeira = 0$\degr$). Todos os offsets obtidos de observações feitas em quatro telescópios diferentes usando câmeras e filtros diferentes estão em bom acordo, o que significa que há um erro nas efemérides de Carme, muito provavelmente devido a um erro em sua inclinação orbital.
+
+\begin{figure}[h]
+\begin{centering}
+\subfigure[Right Ascension]{\includegraphics[scale=0.45]{figuras/Carme_RA}\label{Fig: carme_alfa}}
+\subfigure[Declination]{\includegraphics[scale=0.45]{figuras/Carme_DEC}\label{Fig: carme_delta}}
+\caption{Offsets médios das efemérides e dispersões (barra de erro 1$\sigma$) nas coordenadas de Carme tomadas noite a noite por anomalia verdadeira para cada telescópio. O quadrado vermelho são as observações com o telescópio do OPD Perkin-Elmer, o círculo azul para o Boller \& Chivens também do OPD, o triângulo pra cima preto para o OHP e a estrela verde para o ESO.}
+\label{Fig: carme_anom}
+\end{centering}
+\end{figure}
+
+Esse padrão em declinação também foi identificado para outros satélites como Pasiphae e Ananke. Para alguns satélites a cobertura orbital não foi suficiente para indicar claramente a presença de erros sistemáticos em elementos orbitais específicos. Os gráficos para todos os satélites estão disponíveis em \cite{GomesJunior2015-Irregular}.
+
+Um método que tem se mostrado eficiente para a obtenção desses parâmetros é o métodode ocultações estelares, que proporciona medidas tão precisas que são apenas superadas por medidas oriundas de sondas. Uma vez que suas efemérides não são muito precisas, predizer e observar ocultações estelares é muito difícil e nenhuma observação de um evento desses para um satélite irregular é encontrado na literatura. Um projeto nesse sentido está sendo encaminhado e será discutido na seção \ref{Sec: Irregulares}.
+
+
+\chapter{Astrometria de Netuno e Tritão}
+\label{Cap: Netuno}
+
+
 \chapter{Ocultações Estelares}
 \label{Cap: observacoes}
+
+%Since their ephemerides are not very precise, predicting and observing stellar occultations are very difficult, and no observation of such an event for an irregular satellite is found in the literature. The precise star positions to be derived by the ESA astrometry satellite Gaia \citep{deBruijne2012} will render better predictions with the only source of error being the ephemeris. The positions derived from our observations can be used in new orbital numerical integrations, generating more precise ephemerides.
+
+%The power of stellar occultations for observing relatively small diameter solar system objects is supported by recent works, such as the discovery of a ring system around the Centaur (10199) Chariklo \citep{Braga-Ribas2014}. Once irregular satellites start to be observed by this technique, it will be possible to obtain their physical parameters (shape, size, albedo, density) with unprecedented precision. For instance, in this case, sizes could be obtained with kilometer accuracy. The knowledge of these parameters would in turn bring valuable information for studying the capture mechanisms and origin of the irregular satellites.
 
 \section{Ceres}
 \label{Sec: Ceres}
@@ -272,7 +363,7 @@ Uma comparação do diâmetro equatorial de Ceres medido por diferentes técnica
 
 O evento de 1984 \citep{Millis1987} é a única outra ocultação que podemos comparar nosssos resultados. As medidas do diâmetro não se acordam dentro de 2$\sigma$. É difícil dizer com certeza as razões dessa divergência. Uma forma de clarificar o problema seria redeterminar os instantes de imersão e emersão das curvas de luz originais usando a mesma metodologia aplicada nesse trabalho. Infelizmente, não temos acesso aos dados da curva de luz original do evento de 1984.
 
-A sonda da NASA \textit{Dawn} poderá responder esses questões que são importantes não só no conhecimento do próprio Ceres, mas também para todas as técnicas usadas até agora para o estudo das propriedades físicas dos pequenos objetos do Sistema Solar, como as ocultações estelares.
+A sonda da NASA \textit{Dawn} poderá responder esses questões que são importantes não só no conhecimento do próprio Ceres, mas também para calibrar todas as técnicas usadas até agora para o estudo das propriedades físicas dos pequenos objetos do Sistema Solar, como as ocultações estelares.
 
 \begin{table}[h]
   \caption{Diâmetro equatorial e achatamento de Ceres \label{Tab: Ceres-final}}
@@ -296,72 +387,10 @@ $959 \pm 5$  & $0.05  \pm 0.01$  & Occultação & 5\\
 \section{Satélites Irregulares}
 \label{Sec: Irregulares}
 
-\subsection{Astrometria dos sat\'elites irregulares}
-\label{Subsec: Irr-astrometria}
-
-\indent \indent Durante o mestrado, foi realizado junto ao grupo um trabalho de caráter astrométrico para a melhoria das efemérides dos satélites irregulares de Júpiter Saturno. Em colaboração com o Dr. Jean-Eudes Arlot do IMCCE, reduzi um banco de dados observado no Observatoire Haute-Provence (OHP) entre 1998 e 2008, contendo mais de 28 mil posições para 10 satélites. Reduzi também um banco de dados com mais de 100 mil imagens obtidas no Observatório do Pido dos Dias (OPD) entre 1992 e 2014. Já no doutorado, neste mesmo âmbito, reduzi 810 observações feitas no European Southern Observatory (ESO) em 24 noites utilizando o detector mosaico CCD Wide Field Imager (WFI).
-
-Mais de 8000 posições foram identificadas como pertencentes a satélites irregulares. Porém, devido à grande gama de configurações (3 sítios, 5 telescópios, mais de 10 câmeras e mais de 10 filtros) e às condições observacionais de algumas noites, 6523 posições foram selecionadas como boas posições, ou seja, possuem 3 ou mais estrelas do catálogo de referência (UCAC4), estão dentro de 2$\sigma$ da dispersão das posições da noite e a dispersão da noite à qual pertence não é maior que 2$\sigma$ da média das dispersões das noites. Essa estatística é feita satélite por satélite. O trabalho está aceito para publicação \citep{GomesJunior2015-Irregular} e o catálogo de posições está disponível no CDS.
-
-Um dos principais resultados desse trabalho foi a grande quantidade de posições obtidas para os satélites irregulares em comparação com a quantidade utilizada nas integrações numéricas atuais (ver tabela \ref{Tab: comparison-horizons}).
-
-\begin{table}
-\caption{\label{Tab: comparison-horizons} Comparação entre o número de posições obtidas em \cite{GomesJunior2015-Irregular} e o número utilizado nas integrações numéricas das órbitas pelo JPL como publicado por  \cite{Jacobson2012}. Os satélites estão separados por planeta (linha reta) e por família orbital (linha tracejada)}
-\begin{centering}
-\begin{tabular}{lccccccc}
-\hline  \hline
-Satélite & Diâm. (km)\tablefootnote{Planetary Satellite Physical Parameters - JPL: \url{http://ssd.jpl.nasa.gov/?sat_phys_par}} & Mag V  & OPD  & OHP & ESO & Total  & Jacobson \tabularnewline
-\hline
-Himalia & 170 & 14 & 854 & 357 & 23 & 1234 & 1757 \tabularnewline
-Elara & 86 & 16 & 403 & 187 & 46 & 636 & 1115 \tabularnewline
-Lysithea & 36 & 18 & 60 & 84 & 90 & 234 & 431 \tabularnewline
-Leda & 20 & 19 & 6 & 48 & 44 & 98 & 178 \tabularnewline
-\hdashline
-Pasiphae & 60 & 17 & 295 & 248 & 66 & 609 & 1629 \tabularnewline
-Callirrhoe & 9 & 21 & 9 & -  &  16 & 25 & 95 \tabularnewline
-Megaclite & 5 & 22 & - & -  &  10 & 10 & 50  \tabularnewline
-\hdashline
-Ananke & 28 & 18 & 52 & 141 & 57 & 250 & 600 \tabularnewline
-Praxidike & 7 & 21 & - & -  &   2 & 2 & 59 \tabularnewline
-\hdashline
-Carme & 46 & 18 & 90 & 204 & 37 & 331 & 973 \tabularnewline
-Sinope & 38 & 18 & 41 & 169 & 11 & 221 & 854 \tabularnewline
-Themisto & 8 & 21 & - & - & 16 & 16 & 55 \tabularnewline
-\hline
-Phoebe & 213 & 16 & 1239 & 516 & 32 & 1787 & 3479 \tabularnewline
-\hdashline
-Siarnaq & 40 & 20 & - & 20 & 56 & 76 & 239 \tabularnewline
-Paaliaq & 22 & 21 & - & - & 11 & 11 & 82 \tabularnewline
-\hdashline
-Albiorix & 32 & 20 & - & - & 46 & 46 & 137 \tabularnewline
-\hline
-Sycorax & 150 & 21 & - & - & 35 & 35 & 237 \tabularnewline
-\hline
-Nereid & 340 & 19 & 803 & - & 99 & 902 & 716 \tabularnewline
-\hline
-\end{tabular}
-\par\end{centering}
-\end{table}
-
-Com o objetivo ver o potencial das nossas posições em melhorar as órbitas dos satélites irregulares, analizamos os offsets das nossas posições com respeito às efemérides do JPL. Tomando Carme como exemplo, plotamos os offsets médios das efemérides para cada noite na Fig. \ref{Fig: carme_anom} e suas respectivas dispersões (erro de barra 1$\sigma$) em função da anomalia verdadeira em ascenção reta e declinação. A figura mostra claramente um erro sistemático em declinação. Quando Carme está próximo a seu apojove (anomalia verdadeira = 180$\degr$), seus offsets tem maior probabilidade de serem mais negativos do que aqueles próximos ao seu perijove (anomalia verdadeira = 0$\degr$). Todos os offsets obtidos de observações feitas em quatro telescópios diferentes usando câmeras e filtros diferentes estão em bom acordo, o que significa que há um erro nas efemérides de Carme, muito provavelmente devido a um erro em sua inclinação orbital.
-
-\begin{figure}[h]
-\begin{centering}
-\subfigure[Right Ascension]{\includegraphics[scale=0.45]{figuras/Carme_RA}\label{Fig: carme_alfa}}
-\subfigure[Declination]{\includegraphics[scale=0.45]{figuras/Carme_DEC}\label{Fig: carme_delta}}
-\caption{Offsets médios das efemérides e dispersões (barra de erro 1$\sigma$) nas coordenadas de Carme tomadas noite a noite por anomalia verdadeira para cada telescópio. O quadrado vermelho são as observações com o telescópio do OPD Perkin-Elmer, o círculo azul para o Boller \& Chivens também do OPD, o triângulo pra cima preto para o OHP e a estrela verde para o ESO.}
-\label{Fig: carme_anom}
-\end{centering}
-\end{figure}
-
-Esse padrão em declinação também foi identificado para outros satélites como Pasiphae e Ananke. Para alguns satélites a cobertura orbital não foi suficiente para indicar claramente a presença de erros sistemáticos em elementos orbitais específicos. Os gráficos para todos os satélites estão disponíveis em \cite{GomesJunior2015-Irregular}.
-
 \subsection{Prediç\~ao das ocultaç\~oes}
 \label{Subsec: Irr-predic}
 
-\indent \indent Dentre os satélite irregulares dos planetas gigantes, poucos são aqueles que possuem medidas de seus parâmetros físicos. Apenas Himalia, Phoebe e Nereida foram observados por sondas, apesar de não serem medidas ideais, já que foram alvos de oportunidade. A sonda Cassini observou Himalia em 2000 ao passar próximo a Júpiter e obteve o tamanho de Himalia com um erro médio de 10 km \citep{Porco2003}. Em 2004, a Cassini, aproximando-se de Saturno, observou Phoebe em alta resolução obtendo um erro médio na medida de seu tamanho de 0.7 km \citep{Thomas2010}. Por fim, Nereida foi observado em 1989 pela sonda Voyager 2 e seu tamanho foi obtido com um erro de 25 km \citep{Smith1989}. Para outros satélites irregulares de Júpiter, seus tamanhos foram estimados por \cite{Rettig2001} impondo um albedo de 4\% justificando que esse valor é um albedo nominalmente utilizado para objetos do Sistema Solar Externo.
-
-Com o objetivo de obter parâmetros físicos para os satélites irregulares com maior precisão foram feitas predições de ocultações estelares para os 7 maiores satélites de Júpiter, o satélite Phoebe de Saturno e Nereida de Netuno. Esses objetos são pequenos (ver Tabela \ref{Tab: comparison-horizons}), se comparados aos TNOs e Centauros estudados na seção \ref{Sec: TNOs}, sendo que o menor dos satélites da amostra, Ananke, possui aproximadamente 28 km.
+\indent \indent Com o objetivo de obter parâmetros físicos para os satélites irregulares com maior precisão foram feitas predições de ocultações estelares para os 7 maiores satélites de Júpiter, o satélite Phoebe de Saturno e Nereida de Netuno. Esses objetos são pequenos (ver Tabela \ref{Tab: comparison-horizons}), se comparados aos TNOs e Centauros estudados na seção \ref{Sec: TNOs}, sendo que o menor dos satélites da amostra, Ananke, possui aproximadamente 28 km.
 
 As predições foram feitas utilizando o catálogo UCAC4 e efemérides do JPL. Um total de 588 eventos foram obtidos entre 01 de Janeiro de 2015 e 31 de Dezembro de 2017 para os 9 objetos sendo que a maioria será descartada por passar em regiões de oceano ou onde não há observadores disponíveis. Para Nereida, apenas uma estrela UCAC4 foi identificada para ser ocultada. Nesse caso, utilizamos um catálogo de estrelas feito a partir do caminho aparente do satélite de Netuno Tritão no céu para predições de ocultações estelares pelo mesmo (ver seção \ref{Sec: TNOs}).
 
@@ -374,7 +403,7 @@ Como esses objetos são muito pequenos, em sua maioria as ocultações durarão 
 
 Para corrigir esses erros, será necessário observar as estrelas a serem ocultadas dias antes do evento obtendo os offsets correspondentes e calibrando a predição. Erros em ascensão reta interferem majoritariamente no instante em que a ocultação ocorrerá. Já erros em declinação principalmente na latitude geográfica em que a sombra passará.
 
-Outra fonte de erro na predição é a posição do satélite. Como mostradas na seção \ref{Subsec: Irr-astrometria}, as órbitas dos satélites irregulares não são muito precisas havendo erros sistemáticos em seus elementos orbitais. Infelizmente o JPL não provê suas efemérides com os erros estimados das posições. Dessa forma, há três alternativas para a correção das posições dos satélites.
+Outra fonte de erro na predição é a posição do satélite. Como mostradas no capítulo \ref{Cap: Irr-astrometria}, as órbitas dos satélites irregulares não são muito precisas havendo erros sistemáticos em seus elementos orbitais. Infelizmente o JPL não provê suas efemérides com os erros estimados das posições. Dessa forma, há três alternativas para a correção das posições dos satélites.
 
 A primeira delas é observar o satélite dias antes, quanto mais próximo do evento melhor, e determinar um offset. O offset, portanto, seria considerado estável dentro desses poucos dias uma vez que ele não se move muito em sua órbita. Porém, nem sempre é possível observar o alvo com antecedêndia.
 
@@ -400,34 +429,45 @@ Esse teste consiste em se observar o objeto ocultante e a estrela a ser ocultada
 
 Até o momento, apenas dois testes de ocultações foram feitas, uma de Himalia que ocorreu dia 03 de Março de 2015 e a segunda de Elara que ocorreu dia 30 de Março de 2015. Para cada evento quatro mapas foram gerados: o primeiro com as posições nominais da estrela e do satélite para o instante previsto; a segunda com o offset calculado como descrito anteriomente; o terceiro com os offsets da estrela e do satélite a partir de observações feitas alguns dias antes da ocultação quando os dois objetos estavam separados (campos diferentes); e o quarto a partir de observações feitas com menos de 24 horas de diferença da data prevista com a estrela e o satélite próximos no mesmo campo.
 
+A Fig. \ref{Fig: occ-Himalia} mostra os quatro mapas para o teste da ocultação de Himalia de 03 de Março de 2015. O mapa \ref{Fig: occ-Himalia-off22fev} foi feito a partir de posições obtidas em 22 de fevereiro observadas no telescópio Zeiss do Observatório do Pico dos Dias (OPD). Nesse dia, Himalia e a estrela a ser ocultada foram observados em campos separados por ainda estarem distantes. Na noite do evento, 03 de março, os objetos foram observados com o telescópio Perkin-Elmer do OPD pouco mais de uma hora após os instante previsto para o evento. Satélite e estrela estavam separados por aproximadamente 16 arcsec, portanto muito próximos no campo. A partir dos offsets calculados, o mapa \ref{Fig: occ-Himalia-off03mar} foi gerado.
+
 \begin{figure}
 \begin{centering}
-\subfigure[]{\includegraphics[scale=0.16]{figuras/Elara_1_2015-03-30T01:45:15.png} \label{Fig: carme_alfa}}
-\subfigure[]{\includegraphics[scale=0.16]{figuras/Elara_2_2015-03-30T01:45:03.png} \label{Fig: carme_delta}}
-\subfigure[]{\includegraphics[scale=0.16]{figuras/Elara_3_2015-03-30T01:45:41.png}  \label{Fig: carme_delta}}
-\subfigure[]{\includegraphics[scale=0.16]{figuras/Elara_4_2015-03-30T01:44:13.png}  \label{Fig: carme_delta}}
-\caption{Predições para Elara}
+\subfigure[Sem offsets]{\includegraphics[scale=0.16]{figuras/Himalia1_2015-03-03T00:39:25.png}  \label{Fig: occ-Himalia-nooff}}
+\subfigure[Offset de Himalia a partir do ajuste]{\includegraphics[scale=0.16]{figuras/Himalia2_2015-03-03T00:39:18.png}  \label{Fig: occ-Himalia-ajuste}}
+\subfigure[Obs. dia 22 de Fevereiro (campos separados)]{\includegraphics[scale=0.16]{figuras/Himalia3_2015-03-03T00:39:40.png}   \label{Fig: occ-Himalia-off22fev}}
+\subfigure[Obs. dia 03 de Março (mesmo campo)]{\includegraphics[scale=0.16]{figuras/Himalia4_2015-03-03T00:39:15.png}   \label{Fig: occ-Himalia-off03mar}}
+\caption{Predições para Himalia. O ponto grande em vermelho mostra o local de máxima aproximação da sombra na Terra, os pontos vermelhos menores são os centros da ocultação separados por um minuto, as linhas retas são os limites das sombras dado o tamanho do objeto e as linhas tracejadas demonstram uma diferença de 40 mas do centro da sombra. (a) é o mapa utilizando apenas as posições nominais da estrela e do satélite. (b) mostra a sombra dado um offset estimado pra posição de Himalia dado sua anomalia verdadeira segundo um ajuste feito em cima dos offsets publicados em \cite{GomesJunior2015-Irregular}. Em (c) são aplicados offsets às posições da estrela e do satélite dado observações feitas em 22 de fevereiro no telescópio Zeiss. Em (d), temos o mesmo que para (c) porém com offsets obtidos de observações feitas em 03 de Março no telescópio Perkin-Elmer quando os objetos estavam próximos no campo}
+\label{Fig: occ-Himalia}
+\end{centering}
+\end{figure}
+
+Para esse evento é possível ver que a sombra não varia muito dentre os quatro mapas sugerindo que para Himalia uma probabilidade maior de observar um evento. De fato, a maior diferença entre as sombras dos quatros mapas é de $25 s$ e $130 km$ na direção perpendicular às sombras.
+
+Na Fig. \ref{Fig: occ-Elara} temos os mapas para a ocultação de Elara do dia 30 de Março. As observações de teste foram tomadas dias 25 de março e 02 de abril no Zeiss. Na noite do dia 02 eles ainda puderam ser observadas no mesmo campo. Devido à Elara ser bem mais fraco, as dispersões das posições do satélite nas duas noites acabaram sendo maiores que para Himalia. Ainda assim, as diferenças entre os mapas obtidos foram pequenos. A maior diferença entre eles é de $48 s$ e $302 km$.
+
+\begin{figure}
+\begin{centering}
+\subfigure[Sem offsets]{\includegraphics[scale=0.16]{figuras/Elara1_2015-03-30T01:45:15.png} \label{Fig: occ-Elara-nooff}}
+\subfigure[Offset de Elara a partir do ajuste]{\includegraphics[scale=0.16]{figuras/Elara2_2015-03-30T01:44:59.png} \label{Fig: occ-Elara-ajuste}}
+\subfigure[Obs. dia 25 de Março (campos separados)]{\includegraphics[scale=0.16]{figuras/Elara3_2015-03-30T01:44:17.png}  \label{Fig: occ-Elara-off25mar}}
+\subfigure[Obs. dia 02 de Abril (mesmo campo)]{\includegraphics[scale=0.16]{figuras/Elara4_2015-03-30T01:45:30.png}  \label{Fig: occ-Elara-off02abr}}
+\caption{Predições para Elara. Mesmo que a Fig. \ref{Fig: occ-Himalia}, mas para Elara. O mapa (c) feito a partir de observações tomadas dia 25 de março e (d) a partir de 02 de abril.}
 \label{Fig: occ-Elara}
 \end{centering}
 \end{figure}
 
+Um pedido de tempo foi feito para o telescópio Zeiss para se tentar observar uma ocultação de Himalia  dia 23 de Outubro de 2015. A sombra dessa ocultação passará pela região sudeste do Brasil (ver Fig. \ref{Fig: occ-Himalia-itajuba}). A ocultação passará muito baixo do céu (~22º de altura) e estará próximo ao amanhecer, porém se observar será a primera ocultação de um satélite irregular.
+
 \begin{figure}
-\begin{centering}
-\subfigure[]{\includegraphics[scale=0.16]{figuras/Himalia_1_2015-03-03T00:39:25.png}  \label{Fig: carme_alfa}}
-\subfigure[]{\includegraphics[scale=0.16]{figuras/Himalia_2_2015-03-03T00:39:34.png}  \label{Fig: carme_delta}}
-\subfigure[]{\includegraphics[scale=0.16]{figuras/Himalia_3_2015-03-03T00:39:14.png}   \label{Fig: carme_delta}}
-\subfigure[]{\includegraphics[scale=0.16]{figuras/Himalia_4_2015-03-03T00:39:31.png}   \label{Fig: carme_delta}}
-\caption{Predições para Himalia}
-\label{Fig: occ-Himalia}
-\end{centering}
+\includegraphics[scale=0.35]{figuras/Himalia_2015-10-23T07:54:47.png}
+\caption{Mapa da ocultação de Himalia que ocorrerá em 23 de Outubro de 2015}
+\label{Fig: occ-Himalia-itajuba}
 \end{figure}
 
 
 \section{Centauros e TNOs}
 \label{Sec: TNOs}
-
-\chapter{Astrometria de Netuno e Tritão}
-\label{Cap: Netuno}
 
 
 
