--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -64,18 +64,32 @@ month={Dec},
 pages={313–320}
 }
 
-@Article{Tsiganis2005, 
-title={\href{http://dx.doi.org/10.1038/nature03539}{Origin of the orbital architecture of the giant planets of the Solar System}},
-volume={435},
-url={http://dx.doi.org/10.1038/nature03539},
-DOI={10.1038/nature03539},
-number={7041},
+@ARTICLE{Sheppard2003,
+title={\href{http://dx.doi.org/10.1038/nature01584}{An abundant population of small irregular satellites around Jupiter}},
+volume={423},
+url={http://dx.doi.org/10.1038/nature01584},
+DOI={10.1038/nature01584},
+number={6937},
 journal={Nature},
 publisher={Nature Publishing Group},
-author={Tsiganis, K. and Gomes, R. and Morbidelli, A. and Levison, H. F.},
-year={2005},
+author={Sheppard, Scott S. and Jewitt, David C.},
+year={2003},
 month={May},
-pages={459–461}
+pages={261–263}
+}
+
+@article{Grav2003,
+title={\href{http://dx.doi.org/10.1016/j.icarus.2003.07.005}{Photometric survey of the irregular satellites}},
+volume={166},
+url={http://dx.doi.org/10.1016/j.icarus.2003.07.005},
+DOI={10.1016/j.icarus.2003.07.005},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Grav, Tommy and Holman, Matthew J. and Gladman, Brett J. and Aksnes, Kaare},
+year={2003},
+month={Nov},
+pages={33–45}
 }
 
 @article{Porco2003,
@@ -92,6 +106,48 @@ pages={1541–1547},
 author = {Porco, Carolyn C and West, Robert A and McEwen, Alfred and others},
 }
 
+@article{Nesvorny2003,
+title={\href{http://dx.doi.org/10.1086/375461}{Orbital and Collisional Evolution of the Irregular Satellites}},
+volume={126},
+url={http://dx.doi.org/10.1086/375461},
+DOI={10.1086/375461},
+number={1},
+journal={AJ},
+publisher={IOP Publishing},
+author={Nesvorn, David and Alvarellos, Jose L. A. and Dones, Luke and Levison, Harold F.},
+year={2003},
+month={Jul},
+pages={398–429}
+}
+
+@article{Nesvorny2004,
+title={\href{http://dx.doi.org/10.1086/382099}{Collisional Origin of Families of Irregular Satellites}},
+volume={127},
+url={http://dx.doi.org/10.1086/382099},
+DOI={10.1086/382099},
+number={3},
+journal={AJ},
+publisher={IOP Publishing},
+author={Nesvorn, David and Beaugé, Cristian and Dones, Luke},
+year={2004},
+month={Mar},
+pages={1768–1783}
+}
+
+@Article{Tsiganis2005, 
+title={\href{http://dx.doi.org/10.1038/nature03539}{Origin of the orbital architecture of the giant planets of the Solar System}},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03539},
+DOI={10.1038/nature03539},
+number={7041},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Tsiganis, K. and Gomes, R. and Morbidelli, A. and Levison, H. F.},
+year={2005},
+month={May},
+pages={459–461}
+}
+
 @Article{Gomes2005,
 title={\href{http://dx.doi.org/10.1038/nature03676}{Origin of the cataclysmic Late Heavy Bombardment period of the terrestrial planets}},
 volume={435},
@@ -106,6 +162,20 @@ month={May},
 pages={466–469}
 }
 
+@article{Morbidelli2005,
+title={\href{http://dx.doi.org/10.1038/nature03540}{Chaotic capture of Jupiter’s Trojan asteroids in the early Solar System}},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03540},
+DOI={10.1038/nature03540},
+number={7041},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Morbidelli, A. and Levison, H. F. and Tsiganis, K. and Gomes, R.},
+year={2005},
+month={May},
+pages={462–465}
+}
+
 @Article{Thomas2005,
 title={\href{http://dx.doi.org/10.1038/nature03938}{Differentiation of the asteroid Ceres as revealed by its shape}},
 volume={437},
@@ -118,6 +188,62 @@ author={Thomas, P. C. and Parker, J. Wm. and McFadden, L. A. and others},
 year={2005},
 month={Sep},
 pages={224–226}
+}
+
+@article{Clark2005,
+title={\href{http://dx.doi.org/10.1038/nature03558}{Compositional maps of Saturn’s moon Phoebe from imaging spectroscopy}},
+volume={435},
+url={http://dx.doi.org/10.1038/nature03558},
+DOI={10.1038/nature03558},
+number={7038},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Clark, Roger N. and Brown, Robert H. and Jaumann, Ralf and others},
+year={2005},
+month={May},
+pages={66–69}
+}
+
+@misc{Sheppard2005,
+title={\href{http://dx.doi.org/10.1017/S1743921305006824}{Outer irregular satellites of the planets and their relationship with asteroids, comets and Kuiper Belt objects}},
+volume={1},
+url={http://dx.doi.org/10.1017/S1743921305006824},
+DOI={10.1017/s1743921305006824},
+number={S229},
+journal={Proceedings of the International Astronomical Union},
+publisher={Cambridge University Press (CUP)},
+author={Sheppard, Scott S.},
+year={2005},
+month={Aug},
+pages={319}
+}
+
+@ARTICLE{Grav2007,
+title={\href{http://dx.doi.org/10.1016/j.icarus.2007.04.020}{A deeper look at the colors of the saturnian irregular satellites}},
+volume={191},
+url={http://dx.doi.org/10.1016/j.icarus.2007.04.020},
+DOI={10.1016/j.icarus.2007.04.020},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Grav, T and Bauer, J},
+year={2007},
+month={Nov},
+pages={267–285}
+}
+
+@article{Nesvorny2007,
+title={Capture of Irregular Satellites during Planetary Encounters},
+volume={133},
+url={http://dx.doi.org/10.1086/512850},
+DOI={10.1086/512850},
+number={5},
+journal={AJ},
+publisher={IOP Publishing},
+author={Nesvorný, David and Vokrouhlický, David and Morbidelli, Alessandro},
+year={2007},
+month={Mar},
+pages={1962–1976}
 }
 
 @Article{Carry2008,
@@ -203,7 +329,7 @@ title = {Where did Ceres accrete? },
 booktitle = {LPI Contrib},
 year = {2012},
 volume = {1667},
-number = {6475},
+number = {6475}
 }
 
 @Article{Zacharias2013,
@@ -252,6 +378,20 @@ author = {Dunham, D.W. and others},
 year = {2014},
 journal = {\href{http://sbn.psi.edu/pds/resource/occ.html}{Asteroid Occultations V12.0. EAR-A-3-RDR-OCCULTATIONS-V12.0. NASA Planetary Data System}},
 url = {http://sbn.psi.edu/pds/resource/occ.html},
+}
+
+@article{Nesvorny2014,
+title={\href{http://dx.doi.org/10.1088/0004-637X/784/1/22}{CAPTURE OF IRREGULAR SATELLITES AT JUPITER}},
+volume={784},
+url={http://dx.doi.org/10.1088/0004-637X/784/1/22},
+DOI={10.1088/0004-637x/784/1/22},
+number={1},
+journal={ApJ},
+publisher={IOP Publishing},
+author={Nesvorný, David and Vokrouhlický, David and Deienno, Rogerio},
+year={2014},
+month={Feb},
+pages={22}
 }
 
 @Article{GomesJunior2015-Ceres,
